@@ -8,6 +8,7 @@ src/Dialog_Partition_Info.cc
 src/Dialog_Partition_New.cc
 src/Dialog_Partition_Resize_Move.cc
 src/Dialog_Progress.cc
+src/GParted_Core.cc
 src/Operation.cc
 src/Partition.cc
 src/TreeView_Detail.cc
