@@ -26,7 +26,12 @@ FS fat32::get_filesystem_support( )
 	FS fs ;
 	
 	fs .filesystem = "fat32" ;
-	fs .create = true ;
+	
+	//find out if we can create fat32 filesystems
+	if ( ! system( "which mkdosfs 1>/dev/null 2>/dev/null" ) ) 
+		fs .create = true ;
+		
+	//resing of start and endpoint are provided by libparted
 	fs .resize = true ;
 	fs .move = true ;
 	
@@ -35,35 +40,7 @@ FS fat32::get_filesystem_support( )
 
 bool fat32::Create( const Glib::ustring device_path, const Partition & new_partition )
 {
-	bool return_value = false ;
-	
-	if ( open_device_and_disk( device_path, device, disk ) )
-	{	
-		PedPartition *c_part = NULL ;
-		PedFileSystemType *fs_type = NULL ;
-		PedFileSystem *fs = NULL ;
-		
-		c_part = ped_disk_get_partition_by_sector( disk, (new_partition .sector_end + new_partition .sector_start) / 2 ) ;
-		if ( c_part )
-		{
-			fs_type = ped_file_system_type_get( "fat32" ) ;
-			if ( fs_type )
-			{
-				fs = ped_file_system_create( & c_part ->geom, fs_type, NULL );
-				if ( fs )
-				{
-					if ( ped_partition_set_system(c_part, fs_type ) )
-						return_value = Commit( disk ) ;
-					
-					ped_file_system_close( fs );
-				}
-			}
-		}
-		
-		close_device_and_disk( device, disk ) ;
-	}
-		
-	return return_value ;
+	return Execute_Command( "mkdosfs -F32 " + new_partition .partition ) ;
 }
 
 bool fat32::Resize( const Glib::ustring device_path, const Partition & partition_old, const Partition & partition_new )
