@@ -1,3 +1,7 @@
+2004-11-17 Bart Hakvoort  <gparted@users.sf.net>
+
+	* POTFILES.in: added src/GParted_Core.cc
+
 2004-11-09  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
